tests/snapshots/main__help_text.snap
---
source: tests/main.rs
info:
  program: git-versioner
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Usage: git-versioner [OPTIONS]

Options:
  -p, --path <PATH>                        
      --main-branch <MAIN_BRANCH>          [default: ^(trunk|main|master)$]
      --release-branch <RELEASE_BRANCH>    [default: ^releases?[\\/-](?<BranchName>.+)$]
      --feature-branch <FEATURE_BRANCH>    [default: ^features?[\\/-](?<BranchName>.+)$]
      --version-pattern <VERSION_PATTERN>  [default: ^[vV]?(?<Version>\d+\.\d+\.\d+)]
  -v, --verbose                            
  -h, --help                               Print help
  -V, --version                            Print version

----- stderr -----
