tests/snapshots/main__release_on_main_branch.snap
---
source: tests/main.rs
description: "* 3750095 (HEAD -> trunk, tag: 0.1.0) 0.1.0-rc.1\n"
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "MajorMinorPatch": "0.1.0",
  "PreReleaseTag": "",
  "PreReleaseTagWithDash": "",
  "PreReleaseLabel": "",
  "PreReleaseLabelWithDash": "",
  "PreReleaseNumber": "",
  "BuildMetadata": "",
  "SemVer": "0.1.0",
  "AssemblySemVer": "0.1.0",
  "FullSemVer": "0.1.0",
  "InformationalVersion": "0.1.0"
}

----- stderr -----
